# AndroidStudioApp

./: README.md  build.gradle  import-summary.txt  local.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml  AndroidManifest.xml~
commons/: build.gradle
distraction/: build.gradle  proguard-rules.pro
gradle/wrapper/: gradle-wrapper.properties
middleware/: build.gradle  proguard-rules.pro
news/: build.gradle
rapport/: build.gradle
rapport/GlobalData/: GlobalData.sln
rapport/InMind/: InMind.sln
rapport/InMind-RC-DM/: BindingFilters.cpp  BindingFilters.h  CMakeLists.txt  Constants.h  DateUtil.cpp  DateUtil.h  DialogTask.cpp  DialogTask.cpp.bak  ParseTree.cpp  ParseTree.h  RavenClaw.cfg  RavenClawDM.opensdf  RavenClawDM.vcproj  RavenClawDM.vcxproj  RavenClawDM.vcxproj.filters  StringUtil.cpp  StringUtil.h  UpgradeLog.htm  UpgradeLog2.htm  dialog_states.def  expl.pol  expl_impl.pol  generic.pol  grounding.models  grounding.policies  request_default.pol  request_numnonu.pol
rapport/InMind-RC-DM/Debug/: RavenClawDM.lastbuildstate  vc120.idb
rapport/InMind-RC-DM/Debug/RavenClawDM.tlog/: BscMake.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  RavenClawDM.lastbuildstate  bscmake.read.1.tlog  bscmake.write.1.tlog  cl.command.1.tlog
rapport/InMind-RC-DM/Release/: BuildLog.htm  CL.read.1.tlog  CL.write.1.tlog  RavenClawDM.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.dep  mt.read.1.tlog  mt.write.1.tlog
rapport/InMindUI/: README.md
rapport/NLU/: NLU.sln
(+316 files in other folders)
